WIP resolve color contrast issues

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2,8 +2,9 @@
 ---
 
 // Color scheme: https://color.adobe.com/Collioure-late-evening-color-theme-8618292/
-$primary-color: #18568C;
+$_dummy: ''; // this line is included so vscode renders next variable correctly
 $dark-color: #0C3559;
+$primary-color: $dark-color;
 $accent-color: #F2E205;
 $accent-dark: #BF7E04;
 $accent-darker: #8C4E03;
@@ -40,10 +41,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $header-font-stack;
   font-weight: 900;
   margin-bottom: 20px;
+
+  & a {
+    text-decoration: none;
+  }
 }
 
 a, p, li, td {
-  font-weight: lighter;
+  // font-weight: lighter;
   font-family: $body-font-stack;
   line-height: 1.5em;
 
@@ -65,8 +70,16 @@ ol, ul {
 }
 
 a {
+  color: $dark-color;
+  text-decoration: underline;
+
+  &.btn {
+   text-decoration: none;
+  }
+
   &.unstyled-link {
     color: inherit;
+    text-decoration: none;
 
     &:hover, &:focus {
       color: inherit;
@@ -313,8 +326,10 @@ blockquote {
   }
 
   .jumbotron & {
-    border: 2px white solid;
-    background: rgba(255, 255, 255, 0.4);
+    border: 2.5px white solid;
+    border-radius: 6px;
+    // background: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(4px) brightness(0.4);
   }
 
   .section & {
